--- a/source/_posts/一些喜欢的句子.md
+++ b/source/_posts/一些喜欢的句子.md
@@ -7,8 +7,10 @@ categories:
   - 摘抄
 date: 2021-12-23 16:24:00
 ---
-1. 我讨厌闲聊。  
-我想谈论原子、 死亡、性、外星人、 魔法、智力、生命的意义、遥远的星系，让你想跳舞的音乐、有趣的回忆、你说的谎言、你的缺点、你最喜欢的气味、你的童年、让你彻夜难眠的东西、你的不安全感和恐惧。  
+1. 太在乎，人就会出错，而所有的小心翼翼，都是因为魂不守舍。
+
+1. 我讨厌闲聊。   
+我想谈论原子、 死亡、性、外星人、 魔法、智力、生命的意义、遥远的星系，让你想跳舞的音乐、有趣的回忆、你说的谎言、你的缺点、你最喜欢的气味、你的童年、让你彻夜难眠的东西、你的不安全感和恐惧。  
 我喜欢有深度的人，他们带着扭曲的心态带着情感说话。  
 我不想知道“怎么了”。
 
