--- a/source/_posts/一些随想-关于躺平、追求.md
+++ b/source/_posts/一些随想-关于躺平、追求.md
@@ -5,12 +5,34 @@ categories:
   - 随笔
 date: 2022-01-07 17:45:00
 ---
-最近因为工作、爱情、生活的问题陷入了不小的抑郁之中，使我不得不反思自己为何不能好好的把握他们。  
+&emsp;&emsp;最近因为工作、爱情、生活的问题陷入了不小的抑郁之中，使我不得不反思自己为何不能好好的把握他们。  
 
-我总是担心未来会发生的问题，房价、失业、经济下滑、爱人的脾气、工作的不稳定，我总是在担心未来可能出现的坏情况。而一直以来当我为这种坏情况做准备时，他们也一定会发生，这又强化了这种印象。
+&emsp;&emsp;我总是担心未来会发生的问题，房价、失业、经济下滑、爱人的脾气、工作的不稳定，我总是在担心未来可能出现的坏情况。而一直以来当我为这种坏情况付诸行动时，他们也一定会发生，这又强化了这种印象。
 
-似乎从小到大我就与他人是不同的，尽管大家都以为我是一个开朗乐观又主动的人，评价我是一个暖男，而我是知道我自己的细腻敏感易伤的，初高中时期别人在谈恋爱，我自然也会有喜欢的女孩子，可我却认为，学生时期的不稳定性会导致绝大部分的爱情无疾而终，可等到高中末尾真正在心里为一个女孩铺平了未来的道路时（从大学时期的异地、未来的花销、再到未来的工作、再到未来的城市发展、再到家庭关系等等），却发现可惜的是女孩并不喜欢我，这真是滑稽的一件事情。这样的思虑让我对我自己感觉恶心，像是太宰治说的那样，“对讨厌的事说不出讨厌，对喜欢的事也总是偷偷摸摸。”，我总是在偷偷摸摸的准备些什么，总是想有了十足的准备之后再行动。猥琐，真是猥琐，十足的猥琐！
+&emsp;&emsp;似乎从小到大我就与他人是不同的，尽管大家都以为我是一个开朗乐观又主动的人，评价我是一个暖男，而我是知道我自己的细腻敏感易伤的，初高中时期别人在谈恋爱，我自然也会有喜欢的女孩子，可我却认为，学生时期的不稳定性会导致绝大部分的爱情无疾而终，等到高中末尾真正在心里为一个女孩铺平了未来的道路时（从大学时期的异地、未来的花销、再到未来的工作、再到未来的城市发展、再到家庭关系等等），却发现可惜的是女孩并不喜欢我，这真是滑稽的一件事情。
 
-可惜当时不谙世事的我反思了半天也不知道为何，当时我觉得可能是我与人交际的能力不够，所以我在大学加入了学生会，也加入了感兴趣的社团，希望能在这方面有所发展
+&emsp;&emsp;这样过度的思虑让我对我自己感觉恶心，像是太宰治说的那样，“对讨厌的事说不出讨厌，对喜欢的事也总是偷偷摸摸。”，我总是在偷偷摸摸的准备些什么，总是想有了十足的准备之后再行动。猥琐，真是猥琐，十足的猥琐！
 
-于是我开始反思我的问题了，一则我对事情的进展有着偏执的想法，总是希望事情按照自己的计划前进。二是又对未来抱着悲观的看法（即总是以坏情况来准备）。这两者结合起来，会有很多愚蠢的表现。
+&emsp;&emsp;可惜当时不谙世事的我反思了半天也不知道为何，当时我觉得可能是我与人交际的能力不够，所以我在大学加入了学生会，也加入了感兴趣的社团，希望能在这方面有所发展。在与很多人交往的过程中，我的交际能力提升的很快，而这并没有解决问题，我对我自己这种扭捏的品行看的越来越清醒了，也能敏锐的察觉到自己能力和毅力的不足。于是我退出了学生会，开始寻找能够驱动自我的方式。而在和舍友一起做项目时，我便喜欢上了前端这种灵活多变的开发。
+
+&emsp;&emsp;在步入大四时，也就是2019年夏天，我察觉到社会上一些事情正在发展着，天津之类的二线的房价从2016年便从未变动，而生育率在不断下滑着，同时接受高等教育的人数却与日俱增，我们向着中等收入陷阱前进着，而目前支柱产业还没有转型的迹象。于是我预测2022年经济会进入一个停滞阶段，与此同时就业形势也会变得无比困难。所以我放弃了准备了一半的研究生考试，开始搭建博客、跟舍友一起写项目，打算从前端入手就业。
+
+&emsp;&emsp;令我始料未及的是疫情的到来，将我预测的时间大大提前了，还好国家通过提高研究生入学率、事业单位、公务员岗位吸收了一大波人，不过经过这一波缓和之后，2021年的就业形势会更加严峻，因为产业升级困难的本质仍未改变。2020年将会是未来五年最好的一年。在海投和不断地学习中，在春招上岸了。
+
+&emsp;&emsp;工作之后生活很舒服，同事的关系融洽，经常一起出去玩，一起打游戏，一起聚餐，工作时间也不紧张，有大型项目支持，技术也增长的很快。
+
+&emsp;&emsp;而这时我也喜欢上了一位女孩，开始锻炼身体，减肥，骑行，笨拙地学着穿搭，身体越来越健康，我们的关系也越来越好了，所有的事情似乎都在向好的方向发展。
+
+&emsp;&emsp;可惜更换部门后，工作压力增加起来，而薪资上涨却遥遥无期，外来的领导也希望将职级低的应届生更换为高职级社招员工。这让我陷入不小的精神压力之中。于是我骨子里的卑劣便展现出来了，我变得多虑、抑郁、悲观，这种压力混杂着我的猥琐，传导到了喜欢的女孩那边，于是一切都崩塌了。
+
+&emsp;&emsp;我意识到我越是想抓紧一样东西，越是在意一个人，这种卑劣、猥琐便愈发严重，于是所有的东西都会搞砸。
+
+&emsp;&emsp;在经历了漫长的一段抑郁后，我开始反思我的问题，一则我对事情的进展有着偏执的想法，总是希望事情按照自己的计划前进，希望能把控所有，从而在各种情况下都有完美的结局。二是又对未来抱着悲观的看法（即总是以坏情况来准备）。这两者结合起来，产生了很多愚蠢的表现，我不敢冒险，明明年纪轻轻，却无比保守。
+
+&emsp;&emsp; 强大的理智是好事，但是充沛的感情也并不是坏事，我不应该过度去压制我的情绪，而应该去引导悲伤、去享受快乐。我也不应该对未发生的事情过多的思虑，预测未发生的事情充满太多的变数。想做什么就去做什么，更多的率性而为，这就是潇洒的感觉。
+
+&emsp;&emsp; 我开始试着找工作，联系许久未联系的朋友，跟朋友打招呼，约想见的朋友去吃饭，认识新的朋友，约朋友去买衣服，给妹妹挑礼物。
+
+&emsp;&emsp;我知道从初中停滞到现在的我开始成长了，那种扭捏的猥琐在一点一点的消散，曾经是理智的逐渐成熟，而现在情绪上也成长起来，这样挫折也变成了我的收获。
+
+&emsp;&emsp;接下来的计划是继续健身，已经从112公斤减到97公斤了，下一个目标是从97公斤减到85公斤，迟早要变成孔侑的好身材。认识新的朋友，自己或者跟朋友去海边看日出，好好学习技术把本职工作做好，开始读书，捡起来读书的爱好。
