--- a/source/_posts/跨域.md
+++ b/source/_posts/跨域.md
@@ -1,10 +1,11 @@
 title: 跨域
 author: Jiangxindong
 tags:
-  - 前端学习笔记
+  - 学习笔记
   - 浏览器
 categories:
-  - 前端学习笔记
+  - 学习笔记
+  - 前端
 date: 2019-10-10 16:00:00
 ---
 ## 跨域
